# GAP

./: .buildinfo  .descriptors.f95.swp  .gitmodules  HAL_notebook.ipynb  LICENSE.md  Makefile  README.md  accelerated-aimd-castep-inputs.html  accelerated-aimd-input-reference.html  accelerated-aimd.html  accelerated-aimd_decision-making.html  accelerated-aimd_example_Si16.html  accelerated-aimd_installation.html  analyser.ipynb  clustering.F90  clustering.f95  data.html  data_grabber.ipynb  descriptors.F90  descriptors.f95  descriptors_external.inc  descriptors_noncommercial.inc  descriptors_noncommercial_permutations.inc  descriptors_noncommercial_types.inc  descriptors_v1.f95  descriptors_wrapper.F90  descriptors_wrapper.f95  error.inc  fast_water_trimer.inc  find_water_triplets_mod.f95  find_water_triplets_noncommercial.F90  find_water_triplets_noncommercial.f95  gap_fit.f95  gap_fit.html  gap_fit_module.F90  gap_fit_module.f95  gap_fitting_tutorial.html  gap_si_surface.html  gapversion  genindex.html  (+26 more)
_sources/: data.rst.txt  gap_fit.rst.txt  gap_fitting_tutorial.ipynb.txt  gap_si_surface.ipynb.txt  index.rst.txt  installation.rst.txt  quippy-descriptor-tutorial.ipynb.txt  quippy-potential-tutorial.ipynb.txt
doc_src/: Makefile  accelerated-aimd-castep-inputs.rst  accelerated-aimd-input-reference.rst  accelerated-aimd.rst  accelerated-aimd_decision-making.rst  accelerated-aimd_example_Si16.rst  accelerated-aimd_example_SiC.rst  accelerated-aimd_installation.rst  conf.py  data.rst  gap_fit.rst  gap_fitting_tutorial.ipynb  index.rst  installation.rst  reference.rst  (+2 more)
(+63 files in other folders)
